tests/snapshots/can__can_module_enable.snap
---
source: tests/can.rs
assertion_line: 36
expression: report.take_log()
---
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000E
ldms 0xF0208000 0x00000001 0x00000002
r    0xF0208000 04 0x00000000
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000F
r    0xF003624C 04 0xFFFC00F1
