tests/snapshots/can__setup_can0.snap
---
source: tests/can.rs
assertion_line: 260
expression: report.take_log()
---
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000E
ldms 0xF0208000 0x00000001 0x00000002
r    0xF0208000 04 0x00000000
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000F
r    0xF003624C 04 0xFFFC00F3
r    0xF0208030 04 0x00000000
w    0xF0208030 04 0xC0000000
w    0xF0208030 04 0xC0000003
w    0xF0208030 04 0x00000003
r    0xF0208030 04 0x00000003
r    0xF0208218 04 0x00000001
r    0xF0208218 04 0x00000001
w    0xF0208218 04 0x00000001
r    0xF0208218 04 0x00000001
r    0xF0208218 04 0x00000001
w    0xF0208218 04 0x00000000
r    0xF0208218 04 0x00000000
r    0xF0208218 04 0x00000000
w    0xF0208218 04 0x00000001
r    0xF0208218 04 0x00000001
r    0xF0208218 04 0x00000001
w    0xF0208218 04 0x00000003
r    0xF0036034 04 0x21110212
r    0xF0036030 04 0x17230113
r    0xF0036018 04 0x40013A00
r    0xF0036028 04 0x00013F00
r    0xF003602C 04 0x00000101
r    0xF0036034 04 0x21110212
r    0xF020821C 04 0x06000A03
w    0xF020821C 04 0x00030E03
r    0xF02082C8 04 0x00000000
w    0xF02082C8 04 0x00000000
r    0xF02082C0 04 0x00000000
w    0xF02082C0 04 0x00000440
r    0xF02082C0 04 0x00000440
w    0xF02082C0 04 0x00020440
r    0xF02082E0 04 0x00000000
w    0xF02082E0 04 0x00000001
r    0xF02082E0 04 0x00000001
w    0xF02082E0 04 0x00000003
r    0xF02082F0 04 0x00000000
w    0xF02082F0 04 0x00000400
r    0xF02082F0 04 0x00000400
w    0xF02082F0 04 0x00010400
r    0xF0208218 04 0x00000003
w    0xF0208218 04 0x00000003
r    0xF02082BC 04 0x00000000
w    0xF02082BC 04 0x00000000
r    0xF02082AC 04 0x00000000
w    0xF02082AC 04 0x00000300
r    0xF02082BC 04 0x00000000
w    0xF02082BC 04 0x00000000
r    0xF02082A0 04 0x00000000
w    0xF02082A0 04 0x00000100
r    0xF02082A0 04 0x00000100
w    0xF02082A0 04 0x00040100
r    0xF02082A0 04 0x00040100
w    0xF02082A0 04 0x00040100
r    0xF02082A0 04 0x00040100
w    0xF02082A0 04 0x00040100
r    0xF0208218 04 0x00000003
w    0xF0208218 04 0x00000003
ldms 0xF003B414 0xFF000000 0x10000000
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000E
ldms 0xF003B440 0xF0000000 0x20000000
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000F
r    0xF003624C 04 0xFFFC00F3
r    0xF0208140 04 0x00000000
w    0xF0208140 04 0x00000001
ldms 0xF003B418 0x000000FF 0x000000A8
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
r    0xF003624C 04 0xFFFC00F3
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000E
ldms 0xF003B444 0x0000000F 0x00000002
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
r    0xF003624C 04 0xFFFC00F2
w    0xF003624C 04 0xFFFC000D
r    0xF003624C 04 0xFFFC00F1
w    0xF003624C 04 0xFFFC000F
r    0xF003624C 04 0xFFFC00F3
w    0xF003B404 04 0x01000000
r    0xF0208118 04 0x00000000
w    0xF0208118 04 0x00010000
r    0xF00385B4 04 0x00000000
w    0xF00385B4 04 0x00000002
r    0xF00385B4 04 0x00000000
w    0xF00385B4 04 0x02000000
r    0xF00385B4 04 0x00000000
w    0xF00385B4 04 0x00000400
r    0xF0208254 04 0x00000000
w    0xF0208254 04 0x00000001
r    0xF0208218 04 0x00000000
w    0xF0208218 04 0x00000000
r    0xF0208218 04 0x00000000
r    0xF0208218 04 0x00000000
w    0xF0208218 04 0x00000000
r    0xF0208218 04 0x00000000
